# ollama-benchmark

./: Cargo.toml
ollama/: Cargo.toml
ollama/src/: error.rs  generate.rs  lib.rs
src/: cli.rs  main.rs
