[workspace]
members = [".", "ollama"]

[workspace.dependencies]
serde = "1.0"
serde_json = "1.0"
reqwest = { version = "0.12.9", default-features = false }
url = "2.5.4"
chrono = "0.4"
smol_str = "0.3"
futures-util = "0.3"

[package]
name = "ollama-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
ollama = { path = "ollama" }
tokio = { version = "1.41", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
futures-util = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
url = { workspace = true }
indoc = "2.0"
